--- a/foundry.toml
+++ b/foundry.toml
@@ -22,6 +22,8 @@ verbosity = 4
 [etherscan]
 mainnet = { key = "${API_KEY_ETHERSCAN}" }
 base = { key = "${API_KEY_BASESCAN}", url = "https://api.basescan.org/api" }
+sepolia = { key = "${API_KEY_ETHERSCAN}", url = "https://api.etherscan.io/v2/api?chainid=11155111" }
+bnb_smart_chain = { key = "${API_KEY_BSCSCAN}", url = "https://api.bscscan.com/api" }
 
 [fmt]
 bracket_spacing = true
@@ -44,3 +46,4 @@ mainnet = "https://eth-mainnet.g.alchemy.com/v2/${ALCHEMY_API_KEY}"
 optimism = "https://optimism-rpc.publicnode.com"
 polygon = "https://polygon-bor-rpc.publicnode.com"
 sepolia = "https://ethereum-sepolia-rpc.publicnode.com"
+fork = "http://14.253.139.39:8545"
